# Magik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.VSCodeCounter/2025-05-03_09-59-13/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
hardware/MagikFlightComp/: MagikFlightComp-NPTH.drl  MagikFlightComp-PTH.drl  MagikFlightComp-top-pos.csv  MagikFlightComp.csv  MagikFlightComp.kicad_pcb  MagikFlightComp.kicad_prl  MagikFlightComp.kicad_pro  MagikFlightComp.kicad_sch  MagikFlightComp.xml  fp-info-cache  gps.kicad_sch  report.txt
src/: CMakeLists.txt  config.h  main.c  main.cpp
src/drivers/: driver.h  driver_in.h  driver_out.h
src/drivers/adafruit_gps/: adafruit_gps.cpp  adafruit_gps.h
src/drivers/bmp390/: bmp390.cpp  bmp390.h
src/drivers/flash_internal/: flash_internal.cpp  flash_internal.h
src/drivers/mpu6050/: mpu6050.cpp  mpu6050.h
src/drivers/test_input/: test_handler.cpp  test_handler.h  tester_accel.cpp  tester_accel.h  tester_baro.cpp  tester_baro.h  tester_gps.cpp  tester_gps.h  tester_radio.cpp  tester_radio.h
src/outputs/: logger.cpp  logger.h  pyro.cpp  pyro.h  radio.cpp  radio.h  status_led.cpp  status_led.h  telemetry.cpp  telemetry.h
src/sensors/: accelerometer.cpp  accelerometer.h  barometer.cpp  barometer.h  data.h  gps.cpp  gps.h  sensor.h  sensor_handler.h
src/sensors/drivers/bmp390/: bmp390.cpp  bmp390.h
src/sensors/drivers/test_input/: test_handler.cpp  test_handler.h  tester_accel.cpp  tester_accel.h  tester_baro.cpp  tester_baro.h  tester_core.cpp  tester_core.h  tester_gps.cpp  tester_gps.h  tester_sec.cpp  tester_sec.h
src/tools/: bt_server.cpp  bt_server.h  bt_server_gap.h  bt_server_gatt.h  bt_server_info.gatt  bt_server_info.h  interfaces.cpp  interfaces.h  kalman_filter.cpp  kalman_filter.h  logger.h  processing.cpp  processing.h  settings.h  state_machine.cpp  state_machine.h
src/tools/i2c_pio/: i2c.pio  pio_i2c.c  pio_i2c.h
test/: clean_data.py  data.txt  emulate_sensor.py  main.py  make_data.py  streamline_data.py
test/board_data/: grapher_accel.py  grapher_alt.py  grapher_main.py  grapher_vel.py  idl.csv
test/board_data/magik/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
test/board_data/vega/: baro.csv  filteredDataInfo.csv  flightInfo.csv  flightStates.csv  orientationInfo.csv
test/test_data/: baro.csv  eventInfo.csv  gnssInfo.csv  imu.csv  voltageInfo.csv
